--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 .middle-section-div {
-    text-align: left;
+    text-align: right;
     font-weight: bolder;
     margin: 5% 8%;
 }
@@ -52,7 +52,7 @@ body {
 }
 
 .text-area {
-    background-color: #00B4D8;
+    background-color: #90E0EF;
     border-style: solid;
     border-color: #03045E;
     border-width: 2px;
@@ -60,8 +60,31 @@ body {
 }
 
 .text-area:hover {
-    background-color: #007a92;
+    background-color: #03bde2;
     /* add some animation */
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+    border: none;
+    /* doesn't fill the carousel fix it */
+}
+
+.carousel-item {
+    padding: 3% 13%;
+}
+
+#carousel-streams p {
+    color: #03045E;
+    display: inline-block;
+}
+
+#carousel-streams img {
+    display: inline-block;
+    width: 3%;
+    margin-right: 5%;
+    margin-left: 1%;
 }
 
 
