created bottom bar, messed up text area :thumbsup:

--- a/styles/contact-us-styles.css
+++ b/styles/contact-us-styles.css
@@ -27,7 +27,7 @@ p {
     display: inline-block;
     font-weight: bolder;
     color: white;
-    margin: 4% 0 2% 0;
+    margin: 2% 0 2% 0;
 }
 
 .middle-section form {
@@ -54,4 +54,33 @@ label {
     border-style: solid;
     border-color: white;
     border-width: 3px;
+}
+
+
+/* bottom bar */
+
+.bottom-bar {
+    position: absolute;
+    bottom: 0;
+    height: 4rem;
+    width: 100%;
+    text-align: center;
+}
+
+.bottom-bar div {
+    position: absolute;
+    display: block;
+    text-align: center;
+    left: 40%;
+}
+
+.bottom-bar h1 {
+    font-family: 'Inconsolata', monospace;
+    font-weight: bolder;
+    font-size: 1rem;
+    padding-left: 10%;
+    color: white;
+    padding: 0;
+    margin: 0;
+    display: block;
 }
