--- a/styles/who-are-we-styles.css
+++ b/styles/who-are-we-styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 .section-mehce {
-    padding: 5% 11%;
+    padding: 3% 11%;
 }
 
 .section-mehce h1 {
@@ -58,4 +58,33 @@ body {
 
 .twitter-logo {
     width: 50px;
+}
+
+
+/* bottom bar */
+
+.bottom-bar {
+    position: absolute;
+    bottom: 0;
+    height: 4rem;
+    width: 100%;
+    text-align: center;
+}
+
+.bottom-bar div {
+    position: absolute;
+    display: block;
+    text-align: center;
+    left: 40%;
+}
+
+.bottom-bar h1 {
+    font-family: 'Inconsolata', monospace;
+    font-weight: bolder;
+    font-size: 1rem;
+    padding-left: 10%;
+    color: white;
+    padding: 0;
+    margin: 0;
+    display: block;
 }
