--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ body {
     position: relative;
     display: inline-block;
     width: 80%;
-    margin-left: 13% !important;
+    margin-left: 11% !important;
 }
 
 iframe {
@@ -84,6 +84,11 @@ iframe {
     width: 100%;
     height: 400px;
     object-fit: fill;
+}
+
+.sorunlu-yer {
+    padding-right: 1%;
+    padding-left: 0%;
 }
 
 
