--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,10 @@ body {
     margin-left: 0;
 }
 
+.navbarin-kendisi {
+    margin-bottom: 10%
+}
+
 
 /* middle section */
 
@@ -68,7 +72,7 @@ body {
     position: relative;
     display: inline-block;
     width: 80%;
-    margin-left: 11% !important;
+    margin-left: 10% !important;
 }
 
 iframe {
@@ -97,8 +101,9 @@ iframe {
 .bottom-bar {
     position: absolute;
     width: 100%;
+    top: 110%;
     bottom: 0;
-    height: 4rem;
+    height: 3rem;
     text-align: center;
 }
 
